--- a/WEEK7/ancient-architecture.css
+++ b/WEEK7/ancient-architecture.css
@@ -18,9 +18,10 @@ body>div.img-container>img{
     width: 1100px;
     height: 450px;
     display: block;
+    margin: 0 auto;
 }
 body>div.img-container { 
-    width: 1600px; 
+    width: 1180px; 
     height: 450px; 
     margin-top: 65px ;
 }
